--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-</head>
-<body>
-    <h1>Microsoft Identity Python Web App</h1>
-    <h2>Welcome {{ user_name }}!</h2>
+{% extends "base.html" %}
 
-    <li><a href='/graphcall'>Call Microsoft Graph API</a></li>
+{% block page_content %}
+<div class="container py-4 py-xl-5">
+    <div class="row gy-4 gy-md-0">
+        <div class="col-md-6">
+            <div class="p-xl-5 m-xl-5"><img class="rounded img-fluid w-100 fit-cover" style="min-height: 300px;" src="{{ url_for('static', path='images/schedule_meeting.svg' ) }}" /></div>
+        </div>
+        <div class="col-md-6 d-md-flex align-items-md-center">
+            <div>
+                 <h2 class="text-uppercase fw-bold mb-5">Schedule A Teams meeting</h2>
+                <div class="card" style="width: 30rem;">
+                    <div class="card-header">
+                        <h5 class="mb-0">Meeting Details</h5>
+                    </div>
+                    <div class="card-body">
+                        <form action="{{ url_for('handleForm') }}" method="post">
+                            <label class="form-label">Meeting Subject:</label>
+                            <input id="subject" class="form-control" type="text" value="My Meeting" name="subject" />
+                            <label class="form-label" style="margin-top: -10px;padding-top: 24px;">Meeting Start Time:</label>
+                            <input id="startTime" class="form-control" type="datetime-local" name="startTime" />
+                            <label class="form-label" style="margin-top: -10px;padding-top: 22px;">Meeting End Time:</label>
+                            <input id="endTime" class="form-control" type="datetime-local" name="endTime" />
+                            <h5 class="mt-5">Press the button below to schedule a Teams meeting</h5>
+                            <button class="btn btn-primary btn-lg" type="submit" style="margin-top: 17px;padding-top: 5px;">Schedule the Meeting</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
-    <li><a href="/logout">Logout</a></li>
-    <hr>
-</body>
-</html>
-
+{% endblock %}
